# hdx-google-building-raster

./: .env  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  download.py  main.py  pyproject.toml  requirements.txt  url_list.py
app/: __main__.py  stac.py
hdx/: README.md  download.py
hdx/urls/: ABW_2016.txt  ABW_2017.txt  ABW_2018.txt  ABW_2019.txt  ABW_2020.txt  ABW_2021.txt  ABW_2022.txt  ABW_2023.txt  AFG_2016.txt  AFG_2017.txt  AFG_2018.txt  AFG_2019.txt  AFG_2020.txt  AFG_2021.txt  AFG_2022.txt  AFG_2023.txt  AGO_2016.txt  AGO_2017.txt  AGO_2018.txt  AGO_2019.txt  AGO_2020.txt  AGO_2021.txt  AGO_2022.txt  AGO_2023.txt  AIA_2016.txt  AIA_2017.txt  AIA_2018.txt  AIA_2019.txt  AIA_2020.txt  AIA_2021.txt  AIA_2022.txt  AIA_2023.txt  ARG_2016.txt  ARG_2017.txt  ARG_2018.txt  ARG_2019.txt  ARG_2020.txt  ARG_2021.txt  ARG_2022.txt  ARG_2023.txt  (+1056 more)
scripts/: stac.py  urls.py
