[project]
name = "hdx-gee-stac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["python-dotenv", "stac-geoparquet"]

[dependency-groups]
dev = ["duckdb", "httpx[http2]", "ruff", "taskipy"]

[tool.taskipy.tasks]
app = "python -m app"
export = "uv sync -q && uv export -q -o requirements.txt --no-dev --no-hashes"
ruff = "ruff format && ruff check && ruff format"

[tool.ruff]
fix = true
target-version = "py313"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D104", "INP", "S603", "S607", "S608"]

[tool.ruff.lint.pydocstyle]
convention = "google"
