[project]
name = "hdx-gee-stac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["python-dotenv", "stac-geoparquet"]

[dependency-groups]
dev = ["duckdb", "ruff", "taskipy"]

[tool.taskipy.tasks]
stac = "python scripts/stac.py"
urls = "python scripts/urls.py"
export = "uv sync -q && uv export -q -o requirements.txt --no-dev --no-hashes"
ruff = "ruff format && ruff check && ruff format"
