[project]
name = "hdx-gee-stac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["duckdb", "python-dotenv", "stac-geoparquet"]

[dependency-groups]
dev = ["ruff", "taskipy"]

[tool.taskipy.tasks]
app = "python -m app"
stac = "python app/stac.py"
urls = "python app/urls.py"
export = "uv sync -q && uv export -q -o requirements.txt --no-dev --no-hashes"
ruff = "ruff format && ruff check && ruff format"
